feat(icone elementos): altera icone de dragging

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="header">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseHeader" aria-expanded="true" aria-controls="collapseHeader">
-                                        <ion-icon name="ellipsis-vertical-outline" class="mr-1 drag-n-drop"></ion-icon>
+                                        <ion-icon name="reorder-two-outline" class="mr-1 drag-n-drop"></ion-icon>
                                         <h5 class="fw-bold">Header</h5>
                                     </button>
                                 </h2>
@@ -54,7 +54,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="text">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseText" aria-expanded="false" aria-controls="collapseText">
-                                        <ion-icon name="ellipsis-vertical-outline" class="mr-1 drag-n-drop"></ion-icon>
+                                        <ion-icon name="reorder-two-outline" class="mr-1 drag-n-drop"></ion-icon>
                                         <h5 class="fw-bold">Texto</h5>
                                     </button>
                                 </h2>
@@ -77,7 +77,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="links">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionLinks" aria-expanded="false" aria-controls="accordionLinks">
-                                        <ion-icon name="ellipsis-vertical-outline" class="mr-1 drag-n-drop"></ion-icon>
+                                        <ion-icon name="reorder-two-outline" class="mr-1 drag-n-drop"></ion-icon>
                                         <h5 class="fw-bold">Links</h5>
                                     </button>
                                 </h2>
@@ -107,7 +107,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="email">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionEmail" aria-expanded="false" aria-controls="accordionEmail">
-                                        <ion-icon name="ellipsis-vertical-outline" class="mr-1 drag-n-drop"></ion-icon>
+                                        <ion-icon name="reorder-two-outline" class="mr-1 drag-n-drop"></ion-icon>
                                         <h5 class="fw-bold">Email</h5>
                                     </button>
                                 </h2>
@@ -132,7 +132,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="tweet">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionTweet" aria-expanded="false" aria-controls="accordionTweet">
-                                        <ion-icon name="ellipsis-vertical-outline" class="mr-1 drag-n-drop"></ion-icon>
+                                        <ion-icon name="reorder-two-outline" class="mr-1 drag-n-drop"></ion-icon>
                                         <h5 class="fw-bold">Tweet</h5>
                                     </button>
                                 </h2>
@@ -157,7 +157,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="video">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionVideo" aria-expanded="false" aria-controls="accordionVideo">
-                                        <ion-icon name="ellipsis-vertical-outline" class="mr-1 drag-n-drop"></ion-icon>
+                                        <ion-icon name="reorder-two-outline" class="mr-1 drag-n-drop"></ion-icon>
                                         <h5 class="fw-bold">Vídeo</h5>
                                     </button>
                                 </h2>
@@ -182,7 +182,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="music">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionMusic" aria-expanded="false" aria-controls="accordionMusic">
-                                        <ion-icon name="ellipsis-vertical-outline" class="mr-1 drag-n-drop"></ion-icon>
+                                        <ion-icon name="reorder-two-outline" class="mr-1 drag-n-drop"></ion-icon>
                                         <h5 class="fw-bold">Spotify</h5>
                                     </button>
                                 </h2>
