style(switch): ajustando estilo do switch

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
                                     </button>
                                 </h2>
                                 <div id="collapseText" class="accordion-collapse collapse" aria-labelledby="text" data-bs-parent="#accordionExample">
+                                    <div class="p-3 d-flex align-items-center ">
+                                        <div class="switch__container">
+                                            <input id="switch-shadow" class="switch switch--shadow" type="checkbox" />
+                                            <label for="switch-shadow"></label>
+                                        </div>
+                                        <p class="mb-0">Habilitar Texto</p>
+                                    </div>
                                     <div class="accordion-body section-text">
                                         <div class="d-flex justify-between align-items-center my-4" data-element="bio">
                                             <div class="w-100 align-items-center">
