feat(geral): refatorando codigo

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                                                 <label for="beacons-profile-photo" class="form-label">Foto de Perfil</label>
                                                 <input class="form-control" type="file" id="beacons-profile-photo">
                                             </div>
-                                            <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
+                                            <ion-icon class="add-profilephoto" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
                                         <div class="d-flex justify-between align-items-center my-4" data-element="user-name">
                                             <div class="d-flex w-100 align-items-center">
                                                 <span>User Name</span>
                                             </div>
-                                            <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
+                                            <ion-icon class="add-username" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
                                     </div>
                                 </div>
@@ -72,7 +72,7 @@
                                                 <label for="beacons-bio" class="form-label">Bio</label>
                                                 <textarea class="form-control" rows="5" id="beacons-bio"></textarea>
                                             </div>
-                                            <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
+                                            <ion-icon class="add-bio" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
                                     </div>
                                 </div>
@@ -102,7 +102,7 @@
                                                 </div>
                                             </div>
 
-                                            <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
+                                            <ion-icon class="add-link" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
                                     </div>
                                 </div>
@@ -128,7 +128,7 @@
                                                     Seu melhor Email.
                                                 </div>
                                             </div>
-                                            <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
+                                            <ion-icon class="add-email" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
                                     </div>
                                 </div>
@@ -154,7 +154,7 @@
                                                     @username
                                                 </div>
                                             </div>
-                                            <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
+                                            <ion-icon class="add-tweet" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
                                     </div>
                                 </div>
@@ -180,7 +180,7 @@
                                                     Apenas ID. Ex: YpkTADgjBas. Normalmente está após "watch?v=".
                                                 </div>
                                             </div>
-                                            <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
+                                            <ion-icon class="add-video" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
                                     </div>
                                 </div>
@@ -210,7 +210,7 @@
                                                     no campo.
                                                 </div>
                                             </div>
-                                            <ion-icon class="btn-add" name="add-circle-outline" size="large"></ion-icon>
+                                            <ion-icon class="add-spotify" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
                                     </div>
                                 </div>
@@ -232,14 +232,14 @@
             </div>
         </div>
         <!-- COOKIES -->
-        <div class="cookies-container">
+        <!-- <div class="cookies-container">
             <div class="cookie-content">
                 <p>
                     Nossa plataforma utiliza cookies para fornecer uma ótima experiência a seus usuários; para identificar seus membros registrados (usuários que se registraram em nosso site); monitorar e analisar o desempenho, operação e eficácia da plataforma online; e para garantir que nossa plataforma seja segura. Os cookies que são inicialmente adicionados à sua navegação e acesso podem ser categorizados como cookies essenciais. Esses cookies permitem funcionalidades básicas, como segurança, verificação de identidade e gerenciamento de rede e não podem ser desativados em nosso site.
                 </p>
                 <button class="btn cookies-save">Aceitar e Continuar</button>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <script type="module" src="script.js" defer crossorigin="anonymous"></script>
