feat(draganddrop): separando drag

--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
             </div>
         </div>
         <!-- COOKIES -->
-        <!-- <div class="cookies-container">
+        <div class="cookies-container">
             <div class="cookie-content">
                 <p>
                     Nossa plataforma utiliza cookies para fornecer uma ótima experiência a seus usuários; para identificar seus membros registrados (usuários que se registraram em nosso site); monitorar e analisar o desempenho, operação e eficácia da plataforma online; e para garantir que nossa plataforma seja segura. Os cookies que são inicialmente adicionados à sua navegação e acesso podem ser categorizados como cookies essenciais. Esses cookies permitem funcionalidades básicas, como segurança, verificação de identidade e gerenciamento de rede e não podem ser desativados em nosso site.
                 </p>
                 <button class="btn cookies-save">Aceitar e Continuar</button>
             </div>
-        </div> -->
+        </div>
     </div>
 
     <script type="module" src="script.js" defer crossorigin="anonymous"></script>
