feat(modules): add mod p ocultar/mostrar conteudos

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                                 <div id="collapseText" class="accordion-collapse collapse" aria-labelledby="text" data-bs-parent="#accordionExample">
                                     <div class="p-3 d-flex align-items-center ">
                                         <div class="switch__container">
-                                            <input id="switch-shadow" class="switch switch--shadow" type="checkbox" />
-                                            <label for="switch-shadow"></label>
+                                            <input id="switch-texts" class="switch switch--shadow" type="checkbox" checked />
+                                            <label for="switch-texts"></label>
                                         </div>
-                                        <p class="mb-0">Habilitar Texto</p>
+                                        <p class="mb-0">Mostrar Textos</p>
                                     </div>
                                     <div class="accordion-body section-text">
                                         <div class="d-flex justify-between align-items-center my-4" data-element="bio">
@@ -89,6 +89,13 @@
                                     </button>
                                 </h2>
                                 <div id="accordionLinks" class="accordion-collapse collapse" aria-labelledby="links" data-bs-parent="#accordionExample">
+                                    <div class="p-3 d-flex align-items-center ">
+                                        <div class="switch__container">
+                                            <input id="switch-links" class="switch switch--shadow" type="checkbox" checked />
+                                            <label for="switch-links"></label>
+                                        </div>
+                                        <p class="mb-0">Mostrar Links</p>
+                                    </div>
                                     <div class="accordion-body section-links">
                                         <div class="d-flex justify-content-between align-items-center my-4" data-element="links">
                                             <div>
@@ -119,6 +126,13 @@
                                     </button>
                                 </h2>
                                 <div id="accordionEmail" class="accordion-collapse collapse" aria-labelledby="email" data-bs-parent="#accordionExample">
+                                    <div class="p-3 d-flex align-items-center ">
+                                        <div class="switch__container">
+                                            <input id="switch-email" class="switch switch--shadow" type="checkbox" checked />
+                                            <label for="switch-email"></label>
+                                        </div>
+                                        <p class="mb-0">Mostrar Email</p>
+                                    </div>
                                     <div class="accordion-body section-email">
                                         <div class="d-flex justify-between align-items-center my-4" data-element="email">
                                             <div class="form-floating w-100">
@@ -145,6 +159,13 @@
                                     </button>
                                 </h2>
                                 <div id="accordionTweet" class="accordion-collapse collapse" aria-labelledby="tweet" data-bs-parent="#accordionExample">
+                                    <div class="p-3 d-flex align-items-center ">
+                                        <div class="switch__container">
+                                            <input id="switch-tweet" class="switch switch--shadow" type="checkbox" checked />
+                                            <label for="switch-tweet"></label>
+                                        </div>
+                                        <p class="mb-0">Mostrar Tweet</p>
+                                    </div>
                                     <div class="accordion-body section-tweet">
                                         <div class="d-flex justify-between align-items-center my-4" data-element="tweet">
                                             <div class="form-floating w-100">
@@ -171,6 +192,13 @@
                                     </button>
                                 </h2>
                                 <div id="accordionVideo" class="accordion-collapse collapse" aria-labelledby="video" data-bs-parent="#accordionExample">
+                                    <div class="p-3 d-flex align-items-center ">
+                                        <div class="switch__container">
+                                            <input id="switch-video" class="switch switch--shadow" type="checkbox" checked />
+                                            <label for="switch-video"></label>
+                                        </div>
+                                        <p class="mb-0">Mostrar Vídeo</p>
+                                    </div>
                                     <div class="accordion-body section-video">
                                         <div class="d-flex justify-between align-items-center my-4" data-element="video">
                                             <div class="form-floating w-100">
@@ -197,6 +225,13 @@
                                     </button>
                                 </h2>
                                 <div id="accordionMusic" class="accordion-collapse collapse" aria-labelledby="music" data-bs-parent="#accordionExample">
+                                    <div class="p-3 d-flex align-items-center ">
+                                        <div class="switch__container">
+                                            <input id="switch-spotify" class="switch switch--shadow" type="checkbox" checked />
+                                            <label for="switch-spotify"></label>
+                                        </div>
+                                        <p class="mb-0">Mostrar Vídeo</p>
+                                    </div>
                                     <div class="accordion-body section-music">
                                         <div class="d-flex justify-between align-items-center my-4" data-element="music">
                                             <div class="form-floating w-100">
