feat(checkbox): mostra checkbox apenas se tiver conteudo

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                     </button>
                                 </h2>
                                 <div id="collapseText" class="accordion-collapse collapse" aria-labelledby="text" data-bs-parent="#accordionExample">
-                                    <div class="p-3 d-flex align-items-center ">
+                                    <div class="p-3 d-flex align-items-center switch-texts d-none">
                                         <div class="switch__container">
                                             <input id="switch-texts" class="switch switch--shadow" type="checkbox" checked />
                                             <label for="switch-texts"></label>
@@ -89,7 +89,7 @@
                                     </button>
                                 </h2>
                                 <div id="accordionLinks" class="accordion-collapse collapse" aria-labelledby="links" data-bs-parent="#accordionExample">
-                                    <div class="p-3 d-flex align-items-center ">
+                                    <div class="p-3 d-flex align-items-center switch-links d-none">
                                         <div class="switch__container">
                                             <input id="switch-links" class="switch switch--shadow" type="checkbox" checked />
                                             <label for="switch-links"></label>
@@ -126,7 +126,7 @@
                                     </button>
                                 </h2>
                                 <div id="accordionEmail" class="accordion-collapse collapse" aria-labelledby="email" data-bs-parent="#accordionExample">
-                                    <div class="p-3 d-flex align-items-center ">
+                                    <div class="p-3 d-flex align-items-center switch-email d-none">
                                         <div class="switch__container">
                                             <input id="switch-email" class="switch switch--shadow" type="checkbox" checked />
                                             <label for="switch-email"></label>
@@ -159,7 +159,7 @@
                                     </button>
                                 </h2>
                                 <div id="accordionTweet" class="accordion-collapse collapse" aria-labelledby="tweet" data-bs-parent="#accordionExample">
-                                    <div class="p-3 d-flex align-items-center ">
+                                    <div class="p-3 d-flex align-items-center switch-tweet d-none">
                                         <div class="switch__container">
                                             <input id="switch-tweet" class="switch switch--shadow" type="checkbox" checked />
                                             <label for="switch-tweet"></label>
@@ -192,7 +192,7 @@
                                     </button>
                                 </h2>
                                 <div id="accordionVideo" class="accordion-collapse collapse" aria-labelledby="video" data-bs-parent="#accordionExample">
-                                    <div class="p-3 d-flex align-items-center ">
+                                    <div class="p-3 d-flex align-items-center switch-video d-none">
                                         <div class="switch__container">
                                             <input id="switch-video" class="switch switch--shadow" type="checkbox" checked />
                                             <label for="switch-video"></label>
@@ -225,7 +225,7 @@
                                     </button>
                                 </h2>
                                 <div id="accordionMusic" class="accordion-collapse collapse" aria-labelledby="music" data-bs-parent="#accordionExample">
-                                    <div class="p-3 d-flex align-items-center ">
+                                    <div class="p-3 d-flex align-items-center switch-spotify d-none">
                                         <div class="switch__container">
                                             <input id="switch-spotify" class="switch switch--shadow" type="checkbox" checked />
                                             <label for="switch-spotify"></label>
