feat(header): add name e username

--- a/index.html
+++ b/index.html
@@ -54,9 +54,18 @@
                                             </div>
                                             <ion-icon class="add-profilephoto" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
+                                        <hr class="my-5" />
                                         <div class="d-flex justify-between align-items-center my-4" data-element="user-name">
-                                            <div class="d-flex w-100 align-items-center">
-                                                <span>User Name</span>
+                                            <div class="d-flex flex-column w-100 align-items-start">
+                                                <div class="form-floating mb-3">
+                                                    <input type="text" class="form-control" id="beacons-name" placeholder="Insira seu nome">
+                                                    <label for="beacons-name">Nome</label>
+                                                </div>
+
+                                                <div class="form-floating mb-3">
+                                                    <input type="text" class="form-control" id="beacons-user-name" placeholder="Insira seu username">
+                                                    <label for="beacons-user-name">Username</label>
+                                                </div>
                                             </div>
                                             <ion-icon class="add-username" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
